style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    background-color: #23239f;
    display: flex;
    align-items: center;
    justify-content: center;
}

button {
    background-color: #fdfbd4;
    width: 300px;
    height: 300px;
    font-size: 120px;
}

div{
    color: #fdfbd4;
    font-weight: bold;
    font-size: 20px;
}

h1 {
    font-weight: bold;
    font-size: 50px;
}

#game-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding-bottom: 30px;
}

#button-container {
    display: flex;
    gap: 8px;
    justify-content: center;
    align-items: center;
}

#information {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 8px;
}

#score {
    width: 100%;
    display: flex;
    gap: 8px;
    justify-content: space-between;
    margin-top: 20px;
}

.remove-button {
    width: 200px;
    height: 50px;
    font-size: 20px;
    border: solid #fdfbd4;
    border-radius: 10px;
    font-weight: bold;
}

